# reputation-recon-ultimate

./: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
docs/: ARCHITECTURE.md  EVIDENCE_SCHEMA.md  RUBRIC.md  SCORING.md  SNAPSHOT_SPEC.md
frontend/: package-lock.json
frontend/src/: App.js  index.css
scripts/: import_full_dataset.py  offline_demo_pack.sh  self_check.py  snapshot.sh
src/assessor/: __init__.py
src/assessor/alternatives/: __init__.py  suggest.py  taxonomy.yaml
src/assessor/cache/: db.py  schema.sql  snapshot.json  snapshot.py
src/assessor/cli/: __init__.py  main.py
src/assessor/config/: settings.py
src/assessor/fetchers/: __init__.py  cisa_kev.py  compliance.py  github_advisories.py  nvd.py  vendor_psirt.py
src/assessor/models/: claim.py  cve_stats.py  evidence.py
src/assessor/parsers/: compliance.py  controls.py  cve.py  vendor_posture.py
src/assessor/resolver/: __init__.py  aliases.csv  products_db.csv  resolver.py
src/assessor/scoring/: __init__.py  engine.py  weights.yaml
src/assessor/summarize/: __init__.py  brief_template.md.j2  summarize.py
src/assessor/utils/: http.py  text.py
src/assessor/web/: api.py  app.py
src/assessor/web/routes/: compare.py
src/assessor/web/templates/: base.html.j2  compare.html.j2
tests/: test_cache.py  test_citations.py  test_fetchers.py  test_parsers.py  test_resolver.py  test_scoring.py
tests/fixtures/api/: cisa_kev_sample.json  nvd_cve_sample.json
tests/fixtures/html/: sample_vendor_page.html
tests/fixtures/snapshots/: demo_snapshot.json
