[tool.poetry]
name = "withsecure-assessor"
version = "0.1.0"
description = "A deterministic, source-backed assessor for entity resolution and security posture synthesis."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
packages = [{ include = "assessor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
httpx = "^0.23.0"
pydantic = "^1.10.0"
typer = {version = "^0.13.0", extras = ["all"]}
fastapi = "^0.95.0"
jinja2 = "^3.1.0"
pytest = "^7.2.0"
rapidfuzz = "^3.5.2"
exceptiongroup = "^1.2.0"
PyYAML = "^6.0.3"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"

[tool.poetry.scripts]
assessor = "assessor.cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"